--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -1,13 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Google Maps</title>
+    <title>{{{title}}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
-    <div>
-     {{{body}}}
-    </div>
+    <div id="root">{{{initialHtml}}}</div>
   </body>
 </html>
