--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,4 +1,32 @@
 .gm-container{
-  width: 100%;
   height: 100vh;
+  padding: 0;
+}
+.side-panel .title{
+  text-align: center;
+}
+.list-sidebar {
+  text-align: center;
+  padding: 20px;
+  background: #1500ff;
+  margin: 5px;
+  color: #fff;
+  animation: fadeInFromNone 0.5s ease-in-out;
+}
+
+@keyframes fadeInFromNone {
+  0% {
+      display: none;
+      opacity: 0;
+  }
+
+  50% {
+      display: block;
+      opacity: 0.5;
+  }
+
+  100% {
+      display: block;
+      opacity: 1;
+  }
 }
