--- a/src/components/Spot/Spot.css
+++ b/src/components/Spot/Spot.css
@@ -5,8 +5,9 @@
   opacity: 0;
   position: absolute;
   top: -15px;
+  left: 1px;
   color: white;
-  background: #1500ff;
+  background: #B69A71;
   border-radius: 5px;
   border: solid 2px #fff;
   padding: 5px 5px;
@@ -33,15 +34,40 @@
 }
 
 .spot::before {
-  background-color: #1500ff;
+  background-color: #B69A71;
   content: "";
+  border-bottom: solid 2px;
+  border-right: solid 2px;
   position: absolute;
   width: 7px;
   height: 7px;
-  bottom: 0;
+  bottom: -1px;
   left: 50%;
   transform: translate(-50%, 50%) rotate(45deg);
 }
 .spot.onover::before {
   background-color:#6154f3;
+}
+
+.spot .area {
+  padding: 0 5px;
+}
+
+.spot .stars {
+  display: flex;
+  align-items: baseline;
+  color: #fff44e
+}
+
+.spot .fa-signal.easy {
+  color: #008000;
+}
+.spot .fa-signal.medium {
+  color: #fff008;
+}
+.spot .fa-signal.dificult {
+  color: #ff9508;
+}
+.spot .fa-signal.extreme {
+  color: #ff0000;
 }
