--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -2,15 +2,32 @@
   position: relative;
   display: flex;
   height: 200px;
+  overflow: hidden;
 }
 .carousel-container .slide {
+  position: absolute;
+  top: 0;
+  height: 200px;
   width: 200px;
   background-repeat: no-repeat;
   background-size: cover;
+  transition: opacity 0.5s ease-in-out;
 }
 
-.carousel-container .slide-img {
-  width: 200px;
+.carousel-container .slide.exited {
+  opacity: 0;
+}
+
+.carousel-container .slide.exiting {
+  opacity: 0.7;
+}
+
+.carousel-container .slide.entered {
+  opacity: 1;
+}
+
+.carousel-container .slide.entering {
+  opacity: 0.3;
 }
 
 .carousel-container .controls {
