--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -8,10 +8,10 @@
   position: absolute;
   top: 0;
   height: 200px;
-  width: 200px;
+  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .carousel-container .slide.exited {
@@ -19,7 +19,7 @@
 }
 
 .carousel-container .slide.exiting {
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .carousel-container .slide.entered {
@@ -27,12 +27,12 @@
 }
 
 .carousel-container .slide.entering {
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .carousel-container .controls {
   position: absolute;
-  width: 200px;
+  width: 100%;
   top: 0;
   height: 100%;
 }
@@ -69,7 +69,7 @@
 .carousel-container .arrows .fa-angle-left {
   cursor: pointer;
   position: absolute;
-  left: 5px;
+  left: 7px;
   top: 50%;
   font-size: 40px;
   transform: translateY(-50%);
@@ -78,7 +78,7 @@
 .carousel-container .arrows .fa-angle-right {
   cursor: pointer;
   position: absolute;
-  right: 5px;
+  right: 7px;
   top: 50%;
   font-size: 40px;
   transform: translateY(-50%);
