--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,34 +1,6 @@
-.side-panel .title{
-  text-align: center;
-}
-.list-sidebar {
-  text-align: center;
-  padding: 20px;
-  background: #1500ff;
-  margin: 5px;
-  color: #fff;
-  border-radius: 5px;
-  cursor: pointer;
-  animation: fadeInFromNone 0.5s ease-in-out;
-}
-
-.list-sidebar.onover {
-  background: #6154f3;
-}
-
-@keyframes fadeInFromNone {
-  0% {
-      display: none;
-      opacity: 0;
-  }
-
-  50% {
-      display: block;
-      opacity: 0.5;
-  }
-
-  100% {
-      display: block;
-      opacity: 1;
-  }
+.sidebar-container {
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: overlay;
+  max-height: 100vh;
 }
