--- a/src/components/SpotInfo/SpotInfo.css
+++ b/src/components/SpotInfo/SpotInfo.css
@@ -1,18 +1,18 @@
-.spotInfo-container {
+
+/* .spot-container */
+.spot-container .spotInfo-container {
   height: auto;
   position: absolute;
   top: -328px;
   left: -100px;
   width: 200px;
-  background: #fff;
-  color: #8e8d8d;
   max-width: 200px;
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
   transition: transform 0.2s ease-in-out;
   transform: scaleY(0)
 }
 
-.spotInfo-container::before {
+.spot-container .spotInfo-container::before {
   background-color: #fff;
   content: "";
   position: absolute;
@@ -24,6 +24,43 @@
   transform: translate(-50%, 50%) rotate(45deg);
 }
 
+/* .spot-container */
+
+/* .sidebar-container */
+
+.sidebar-container .spotInfo-container {
+  display: flex;
+  padding: 10px 0px;
+  max-height: 100vh;
+}
+
+.sidebar-container .spotInfo-container .close {
+  display: none;
+}
+
+.sidebar-container .spotInfo-container .info {
+  display: flex;
+  flex-direction: column
+}
+
+.sidebar-container .spotInfo-container .rates {
+  position: absolute;
+  bottom: 5px;
+  right: 0;
+}
+
+/* .sidebar-container */
+
+/* Generic */
+
+.spotInfo-container {
+  background: #fff;
+  color: #8e8d8d;
+  min-width: 100%;
+  transition: transform 0.2s ease-in-out;
+  transform: scaleY(0)
+}
+
 .spotInfo-container.entering {
   transform: scaleY(0)
 }
@@ -32,7 +69,9 @@
   z-index: 3;
 }
 .spotInfo-container .slider {
-  width: 200px;
+  width: 100%;
+  min-width: 200px;
+  max-width: 200px;
 }
 .spotInfo-container .info{
   padding: 5px;
@@ -85,4 +124,27 @@
 }
 .spotInfo-container .fa-signal.extreme {
   color: #ff0000;
+}
+
+@media only screen and (max-width: 992px) {
+  .sidebar-container .spotInfo-container {
+    flex-wrap: wrap;
+  }
+  .spotInfo-container .slider {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1900px) {
+  .sidebar-container .spotInfo-container {
+    flex-wrap: wrap;
+    max-width: 50%;
+    min-width: 50%;
+    padding: 10px 5px;
+  }
+  .spotInfo-container .slider {
+    width: 100%;
+    max-width: 100%;
+  }
 }
