--- a/src/components/SpotInfo/SpotInfo.css
+++ b/src/components/SpotInfo/SpotInfo.css
@@ -30,8 +30,9 @@
 
 .sidebar-container .spotInfo-container {
   display: flex;
-  padding: 10px 0px;
+  padding: 10px 10px;
   max-height: 100vh;
+  cursor: pointer;
 }
 
 .sidebar-container .spotInfo-container .close {
@@ -47,6 +48,10 @@
   position: absolute;
   bottom: 5px;
   right: 0;
+}
+.sidebar-container .spotInfo-container.selected {
+  border-radius: 5px;
+  background: rgba(102, 136, 63, 0.25)
 }
 
 /* .sidebar-container */
@@ -88,7 +93,7 @@
 }
 .spotInfo-container .area {
   display: block;
-  padding: 5px 5px;
+  padding: 5px 10px;
 }
 .spotInfo-container .name {
   font-size: 20px;
@@ -134,6 +139,10 @@
     width: 100%;
     max-width: 100%;
   }
+  .spotInfo-container .area {
+    display: block;
+    padding: 5px 10px 5px 0px;
+  }
 }
 
 @media only screen and (min-width: 1900px) {
@@ -141,7 +150,6 @@
     flex-wrap: wrap;
     max-width: 50%;
     min-width: 50%;
-    padding: 10px 5px;
   }
   .spotInfo-container .slider {
     width: 100%;
