--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,3 +2,9 @@
 .googlemap-container{
   height: 100vh;
 }
+
+@media only screen and (max-width: 576px) {
+  .googlemap-container {
+    display: none;
+  }
+}
