--- a/src/components/Spot/Spot.css
+++ b/src/components/Spot/Spot.css
@@ -3,20 +3,20 @@
 }
 .spot {
   opacity: 0;
+  display: flex;
   position: absolute;
-  top: -15px;
-  left: 1px;
+  top: 0;
+  left: 0;
   color: white;
   background: #ADB6BB;
   border-radius: 5px;
   border: solid 2px #fff;
   padding: 5px 5px;
-  display: inline-flex;
   cursor: pointer;
   text-align: center;
   align-items: center;
   justify-content: center;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -100%);
   transition: opacity 0.5s ease-in-out;
 }
 
