--- a/src/components/SpotInfo/SpotInfo.css
+++ b/src/components/SpotInfo/SpotInfo.css
@@ -3,13 +3,13 @@
 .spot-container .spotInfo-container {
   height: auto;
   position: absolute;
-  top: -328px;
-  left: -100px;
+  top: 0;
+  left: 0;
   width: 200px;
   max-width: 200px;
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+  transform: translate(-50%, -100%) scale(0);
   transition: transform 0.2s ease-in-out;
-  transform: scaleY(0)
 }
 
 .spot-container .spotInfo-container::before {
@@ -23,6 +23,13 @@
   box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.75);
   transform: translate(-50%, 50%) rotate(45deg);
 }
+.spot-container .spotInfo-container.entering {
+  transform: translate(-50%, -100%) scale(0);
+}
+.spot-container .spotInfo-container.entered {
+  transform: translate(-50%, -100%) scale(1);
+  z-index: 3;
+}
 
 /* .spot-container */
 
@@ -33,6 +40,7 @@
   padding: 10px 10px;
   max-height: 100vh;
   cursor: pointer;
+  transform: scale(0);
 }
 
 .sidebar-container .spotInfo-container .close {
@@ -59,6 +67,13 @@
   border-radius: 5px;
 }
 
+.sidebar-container .spotInfo-container.entering {
+  transform: scale(0);
+}
+.sidebar-container .spotInfo-container.entered {
+  transform: scale(1);
+  z-index: 3;
+}
 /* .sidebar-container */
 
 /* Generic */
@@ -68,16 +83,8 @@
   color: #8e8d8d;
   min-width: 100%;
   transition: transform 0.2s ease-in-out;
-  transform: scaleY(0)
 }
 
-.spotInfo-container.entering {
-  transform: scaleY(0)
-}
-.spotInfo-container.entered {
-  transform: scaleY(1);
-  z-index: 3;
-}
 .spotInfo-container .slider {
   width: 100%;
   max-width: 200px;
