add redux and configuration

--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -7,5 +7,8 @@
   </head>
   <body>
     <div id="root">{{{initialHtml}}}</div>
+    <script>
+      window.__INITIAL_STORE__ = {{{initialStore}}}
+    </script>
   </body>
 </html>
