--- a/src/components/SpotCard/SpotCard.css
+++ b/src/components/SpotCard/SpotCard.css
@@ -1,6 +1,6 @@
 
 /* .spot-container */
-.spot-container .spotCard-container {
+.spot-container .spotCard {
   height: auto;
   position: absolute;
   top: 0;
@@ -12,7 +12,7 @@
   transition: transform 0.2s ease-in-out;
 }
 
-.spot-container .spotCard-container::before {
+.spot-container .spotCard::before {
   background-color: #fff;
   content: "";
   position: absolute;
@@ -23,10 +23,10 @@
   box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.75);
   transform: translate(-50%, 50%) rotate(45deg);
 }
-.spot-container .spotCard-container.entering {
+.spot-container .spotCard.entering {
   transform: translate(-50%, -100%) scale(0);
 }
-.spot-container .spotCard-container.entered {
+.spot-container .spotCard.entered {
   transform: translate(-50%, -100%) scale(1);
   z-index: 3;
 }
@@ -35,7 +35,7 @@
 
 /* .sidebar-container */
 
-.sidebar-container .spotCard-container {
+.sidebar-container .spotCard {
   display: flex;
   padding: 10px 10px;
   max-height: 100vh;
@@ -43,34 +43,34 @@
   transform: scale(0);
 }
 
-.sidebar-container .spotCard-container .close {
+.sidebar-container .spotCard .close {
   display: none;
 }
 
-.sidebar-container .spotCard-container .info {
+.sidebar-container .spotCard .info {
   display: flex;
   flex-direction: column
 }
 
-.sidebar-container .spotCard-container .rates {
+.sidebar-container .spotCard .rates {
   position: absolute;
   bottom: 5px;
   right: 0;
 }
-.sidebar-container .spotCard-container.selected {
+.sidebar-container .spotCard.selected {
   background: rgba(102, 136, 63, 0.25);
   box-shadow: inset 0px 0px 1px 1px rgba(102, 136, 63, 1);
   border-radius: 5px;
 }
-.sidebar-container .spotCard-container.onOver {
+.sidebar-container .spotCard.onOver {
   box-shadow: inset 0px 0px 1px 1px rgba(102, 136, 63, 1);
   border-radius: 5px;
 }
 
-.sidebar-container .spotCard-container.entering {
+.sidebar-container .spotCard.entering {
   transform: scale(0);
 }
-.sidebar-container .spotCard-container.entered {
+.sidebar-container .spotCard.entered {
   transform: scale(1);
   z-index: 3;
 }
@@ -78,21 +78,21 @@
 
 /* Generic */
 
-.spotCard-container {
+.spotCard {
   background: #fff;
   color: #8e8d8d;
   min-width: 100%;
   transition: transform 0.2s ease-in-out;
 }
 
-.spotCard-container .slider {
+.spotCard .slider {
   width: 100%;
   max-width: 200px;
 }
-.spotCard-container .info{
+.spotCard .info{
   padding: 5px;
 }
-.spotCard-container .close {
+.spotCard .close {
   position: absolute;
   right: 1px;
   font-size: 20px;
@@ -102,74 +102,74 @@
   cursor: pointer;
   z-index: 4;
 }
-.spotCard-container .area {
+.spotCard .area {
   display: block;
   padding: 5px 10px;
 }
-.spotCard-container .name {
+.spotCard .name {
   font-size: 20px;
 }
-.spotCard-container .rates {
+.spotCard .rates {
   display: flex;
 }
-.spotCard-container .stars {
+.spotCard .stars {
   align-self: flex-end;
   width: 100%;
   font-size: 12px;
 }
-.spotCard-container .fa-star{
+.spotCard .fa-star{
   align-self: baseline;
   font-size: 10px;
   padding-left: 3px;
   color: #e6c149;
 }
 
-.spotCard-container .dificulty {
+.spotCard .dificulty {
   align-self: flex-end;
   font-size: 20px;
 }
 
-.spotCard-container .fa-signal.easy {
+.spotCard .fa-signal.easy {
   color: #008000;
 }
-.spotCard-container .fa-signal.medium {
+.spotCard .fa-signal.medium {
   color: #fff008;
 }
-.spotCard-container .fa-signal.dificult {
+.spotCard .fa-signal.dificult {
   color: #ff9508;
 }
-.spotCard-container .fa-signal.extreme {
+.spotCard .fa-signal.extreme {
   color: #ff0000;
 }
 
 @media only screen and (max-width: 992px) {
-  .sidebar-container .spotCard-container {
+  .sidebar-container .spotCard {
     flex-wrap: wrap;
   }
-  .spotCard-container .slider {
+  .spotCard .slider {
     width: 100%;
     min-width: 200px;
     max-width: 100%;
   }
-  .spotCard-container .area {
+  .spotCard .area {
     display: block;
     padding: 5px 10px 5px 5px;
   }
 }
 
 @media only screen and (max-width: 768px) {
-  .spotCard-container .slider {
+  .spotCard .slider {
     min-width: 100%;
   }
 }
 
 @media only screen and (min-width: 1900px) {
-  .sidebar-container .spotCard-container {
+  .sidebar-container .spotCard {
     flex-wrap: wrap;
     max-width: 50%;
     min-width: 50%;
   }
-  .spotCard-container .slider {
+  .spotCard .slider {
     width: 100%;
     min-width: 200px;
     max-width: 100%;
